@@ -2,11 +2,13 @@ package com.fooddiary.api.controller;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -23,13 +25,13 @@ public class FileStorageController {
     @Autowired
     FileStorageService fileStorageService;
 
-    // @GetMapping("/s3")
+    //@GetMapping("/s3")
     public ResponseEntity<byte[]> getObject(HttpServletRequest request, HttpServletResponse response)
             throws IOException {
-            final byte[] fileBuffer = fileStorageService.getObject("");
+            final byte[] fileBuffer = fileStorageService.getObject("index.txt");
             return ResponseEntity.ok()
                                  .contentType(MediaType.APPLICATION_OCTET_STREAM)
-                                 .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + URLEncoder.encode("test.JPG", "utf-8").replaceAll("\\+", "%20") + ';')
+                                 .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + URLEncoder.encode("test.txt", StandardCharsets.UTF_8).replaceAll("\\+", "%20") + ';')
                                  .body(fileBuffer);
 
     }
